--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -58,6 +58,15 @@
 
   <main id="bodyContainer" class="container" style="overflow:visible;">
 
+    <div class="new-feed-container-load-status" style="display:none;">
+      <div class="loader-ellips infinite-scroll-request">
+        <span class="loader-ellips__dot"></span>
+        <span class="loader-ellips__dot"></span>
+        <span class="loader-ellips__dot"></span>
+        <span class="loader-ellips__dot"></span>
+      </div>
+    </div>
+
     {{{body}}}
 
   </main>
