--- a/views/tag.handlebars
+++ b/views/tag.handlebars
@@ -9,5 +9,5 @@
 
 <script>
   activeScrollPath = '/showposts/tag/{{name}}/';
-  startInfiniteScroll();
+  $(function(){startInfiniteScroll();});
 </script>
