--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -56,7 +56,7 @@
 
   {{> navbar }}
 
-  <main id="bodyContainer" class="container" style="overflow:visible;">
+  <main id="bodyContainer" class="container">
 
     <div class="new-feed-container-load-status" style="display:none;">
       <div class="loader-ellips infinite-scroll-request">
@@ -66,6 +66,13 @@
         <span class="loader-ellips__dot"></span>
       </div>
     </div>
+
+    <script>
+      //this small fun convenience function will find elements using the selector argument within the active feed container, which will be within this bodyContainer class
+      function $active(selector){
+        return selector===undefined ? $('.active-feed-container') : $('.active-feed-container').find(selector);
+      }
+    </script>
 
     {{{body}}}
 
