--- a/views/partials/scriptPartials/miscInteractivityScripts.handlebars
+++ b/views/partials/scriptPartials/miscInteractivityScripts.handlebars
@@ -222,7 +222,7 @@ $(function() {
         var targetCommunitySlug = $(this).closest("#boostPostLocationModal").find('#communities-dropdown').find(':selected').attr("data-slug");
         var targetCommunityID = $(this).closest("#boostPostLocationModal").find('#communities-dropdown').val();
         $.post("/createboost/" + postID + "/" + targetCommunityID, function(response){
-            window.location.href = '/community/' + targetCommunitySlug;
+            window.location.href = '/community/' + targetCommunitySlug; //todo: don't do this
         });
     });
 
