--- a/views/partials/scriptPartials/profilescripts.handlebars
+++ b/views/partials/scriptPartials/profilescripts.handlebars
@@ -1,66 +1,65 @@
 <script type="text/javascript">
-if(!window.profileScriptsLoaded){ //bc these listeners, etc, should only be attached once, we set this flag after loading them once, so they aren't loaded again if the user goes to their profile page twice without reloading the dom
+//if(!window.profileScriptsLoaded){ //bc these listeners, etc, should only be attached once, we set this flag after loading them once, so they aren't loaded again if the user goes to their profile page twice without reloading the dom
   {{#if isOwnProfile}}
-    $("#image-upload").change(function (e) {
-      var preview = $("#image-preview");
-      var reader = new FileReader();
-      reader.addEventListener("load", function () {
-        preview.css('background-image',"url("+reader.result+")");
-        $("#image-label").html("change image");
-      }, false);
+    $active("#image-upload").change(function (e) {
+      var preview = $active("#image-preview");
       if (this.files[0]) {
-        reader.readAsDataURL(this.files[0]);
+        preview.css('background-image',"url("+URL.createObjectURL(this.files[0])+")");
       }else{
         preview.css('background-image',"");
-        $("#image-label").html("choose image");
+        $active("#image-label").html("choose image");
       }
     })
-    $("#image-preview").css("background-image", "url('/images/{{profileData.image}}')");
-    $("#image-preview").css("background-size", "cover");
-    $("#image-preview").css("background-position", "center center");
+    $active("#image-preview").css("background-image", "url('/images/{{profileData.image}}')");
+    $active("#image-preview").css("background-size", "cover");
+    $active("#image-preview").css("background-position", "center center");
 
   {{else}}
 
   function confirmRelationshipChange(confirmQString, relType, addOrDelete) {
     bootbox.confirm(confirmQString, function (result) {
       if (result == true) {
-        //todo: make this api method less shit
-        $.post("/useraction/" + relType + "/" + addOrDelete + "/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData.username }}", function (result) {
-          location.reload();
+        $.post("/useraction/" + relType + "/" + addOrDelete + "/{{profileData._id}}", function (result) {
+          $('.active-feed-container').css('display','none');
+          $('.new-feed-container-load-status').css('display','block');
+          $.get(window.location.href+'/internalized', function(data){
+            $('.new-feed-container-load-status').css('display','none');
+            $('.active-feed-container').replaceWith(data);
+          })
         });
       }
     });
   }
 
-  $("#flagButton").click(function () {
+  $active("#flagButton").click(function () {
     confirmRelationshipChange('Are you sure you want to flag this user?', 'flag', 'add');
   });
 
-  $("#unflagButton").click(function () {
+  $active("#unflagButton").click(function () {
     confirmRelationshipChange('Are you sure you want to unflag this user?', 'flag', 'delete');
   });
-  $("#muteButton").click(function () {
+  $active("#muteButton").click(function () {
     confirmRelationshipChange('Are you sure you want to mute this user? Their posts will be hidden from you across sweet - they will not be notified of this.', 'mute', 'add');
   });
-  $("#unmuteButton").click(function () {
+  $active("#unmuteButton").click(function () {
     confirmRelationshipChange('Are you sure you want to unmute this user? You will be able to see their posts across sweet.', 'mute', 'delete');
   });
-  $("#trustButton").click(function () {
+  $active("#trustButton").click(function () {
     confirmRelationshipChange('Are you sure you want to trust this user?', 'trust', 'add');
   });
-  $("#untrustButton").click(function () {
+  $active("#untrustButton").click(function () {
     confirmRelationshipChange('Are you sure you want to stop trusting this user?', 'trust', 'delete');
   });
-  $("#followButton").click(function () {
+  $active("#followButton").click(function () {
     //i think this is the action we least want to discourage/make weird, so no confirmation dialogue
     $.post("/useraction/follow/add/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData._id }}/{{ profileData._id }}/{{ loggedInUserData.username }}", function (result) {
       location.reload();
     });
   });
-  $("#unfollowButton").click(function () {
+  $active("#unfollowButton").click(function () {
     confirmRelationshipChange('Are you sure you want to unfollow this user?', 'follow', 'delete');
   });
   {{/if}}
-  window.profileScriptsLoaded = true;
-}
+  //window.profileScriptsLoaded = true;
+//}
 </script>
