populate page title bars better

--- a/views/community.handlebars
+++ b/views/community.handlebars
@@ -1,4 +1,4 @@
-<div id="pageContainer" class="row active-feed-container">
+<div id="pageContainer" class="row active-feed-container"{{#if metadata.title}} data-title="{{metadata.title}}"{{/if}}>
   <div class="col-md-4 mx-2 mx-md-0 mb-3">
     {{> communitysidebar}}
   </div>
