--- a/views/tag.handlebars
+++ b/views/tag.handlebars
@@ -1,4 +1,4 @@
-<div id="homeBody" class="row justify-content-center active-feed-container">
+<div id="homeBody" class="row justify-content-center active-feed-container" data-title="Tag: {{name}}">
   <div class="col-lg-8">
     <h3 class="page-header mx-2">#{{name}}</h3>
 		<div class="postsContainer">
