--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -1,4 +1,4 @@
-<div id="userBody" class="row active-feed-container">
+<div id="userBody" class="row active-feed-container"{{#if metadata.title}} data-title="{{metadata.title}}"{{/if}}>
   <div class="col-md-4 mx-2 mx-md-0">
     {{#if loggedIn}}
       {{> usersidebar}}
