clear old metadata for users+communities upon changes

--- a/views/partials/embed.handlebars
+++ b/views/partials/embed.handlebars
@@ -9,7 +9,7 @@
         {{/if}}
     <div class="link-preview-text-container">
         <span class="link-preview-title">{{title}}</span>
-        <span class="link-preview-description">{{{description}}}</span>
+        <span class="link-preview-description">{{description}}</span>
         <span class="link-preview-domain">{{domain}}{{#eq type "video"}} (will open as an embed){{/eq}}</span>
     </div>
 </a>
