--- a/views/partials/posts_v2.handlebars
+++ b/views/partials/posts_v2.handlebars
@@ -107,19 +107,17 @@
                             <i class="fas fa-retweet"></i>
                         </button>
                         <div class="dropdown-menu" aria-labelledby="post-boosting-dropdown">
-                            <form action="/{{#if youBoosted}}remove{{else}}create{{/if}}boost/{{this._id}}{{#unless youBoosted}}/userfeed{{/unless}}" method="post" class="post-toolbar-form">
-                                <button type="submit" class="boost-post dropdown-item">
-                                    {{#if youBoosted}}
-                                        <span class="fa-layers fa-fw">
-                                            <i class="fas fa-retweet"></i>
-                                            <i class="fas fa-slash" data-fa-transform="rotate-90"></i>
-                                        </span> Unboost post
-                                    {{else}}
-                                        <i class="fas fa-fw fa-user-circle"></i> Boost post to your profile
-                                    {{/if}}
-                                </button>
-                            </form>
-                            <button type="button" class="dropdown-item boost-post-userfeed" data-toggle="modal" data-target="#boostPostLocationModal" >
+                            <button class="boost-post-userfeed dropdown-item" data-action="{{#if youBoosted}}unboost{{else}}boost{{/if}}" data-boost-url="/{{#if youBoosted}}remove{{else}}create{{/if}}boost/{{this._id}}{{#unless youBoosted}}/userfeed{{/unless}}">
+                                {{#if youBoosted}}
+                                    <span class="fa-layers fa-fw">
+                                        <i class="fas fa-retweet"></i>
+                                        <i class="fas fa-slash" data-fa-transform="rotate-90"></i>
+                                    </span> Unboost post
+                                {{else}}
+                                    <i class="fas fa-fw fa-user-circle"></i> Boost post to your profile
+                                {{/if}}
+                            </button>
+                            <button type="button" class="dropdown-item boost-post-community" data-toggle="modal" data-target="#boostPostLocationModal" >
                                 <i class="fas fa-fw fa-leaf"></i> Boost post in a community
                             </button>
                         </div>
