--- a/views/partials/scriptPartials/miscInteractivityScripts.handlebars
+++ b/views/partials/scriptPartials/miscInteractivityScripts.handlebars
@@ -217,12 +217,32 @@ $(function() {
         modal.find('#original-post-id').val(postID);
     })
 
+    $('body').on('click', '.boost-post-userfeed', function(){
+      var $this = $(this);
+      $this.html('<i class=fa fa-spinner fa-spin"></i>');
+      $.post($this.attr('data-boost-url')).done(function(){
+        if($this.attr('data-action')=="boost"){
+          $this.attr('data-action',"unboost");
+          $this.html('<span class="fa-layers fa-fw"><i class="fas fa-retweet"></i><i class="fas fa-slash" data-fa-transform="rotate-90"></i></span> Unboost post');
+          $this.attr('data-boost-url','/removeboost/'+$this.closest('.post').attr('data-post-id'));
+        }else{
+          $this.attr('data-action',"boost");
+          $this.html('<i class="fas fa-fw fa-user-circle"></i> Boost post to your profile');
+          $this.attr('data-boost-url','/createboost/'+$this.closest('.post').attr('data-post-id')+'/userfeed');
+        }
+      })
+    })
+
     $('body').on('click', '.boost-post-into-community', function() {
-        var postID = $(this).closest("#boostPostLocationModal").find('#original-post-id').val();
+        var modal = $(this).closest("#boostPostLocationModal")
+        var postID = modal.find('#original-post-id').val();
         var targetCommunitySlug = $(this).closest("#boostPostLocationModal").find('#communities-dropdown').find(':selected').attr("data-slug");
         var targetCommunityID = $(this).closest("#boostPostLocationModal").find('#communities-dropdown').val();
-        $.post("/createboost/" + postID + "/" + targetCommunityID, function(response){
-            window.location.href = '/community/' + targetCommunitySlug; //todo: don't do this
+        var $this = $(this);
+        $this.html('<i class="fa fa-spinner fa-spin"></i>');
+        $.post("/createboost/" + postID + "/" + targetCommunityID).done(function(data){
+          modal.modal('hide');
+          //todo: add boost header to post once it is figured out what that will look like
         });
     });
 
@@ -245,8 +265,7 @@ $(function() {
       })
     }
     var text = $this.text();
-    $this.text(
-        text == "Show post" ? "Hide post" : "Show post");
+    $this.text((text == "Show post") ? "Hide post" : "Show post");
   })
   $('body').on('click', '.delete-post', function() {
     var element = $(this);
